--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
-<<<<<<<
+
 * {
     margin: 0;
     padding: 0; 
+}
+
+p {
+    text-align: center;
+}
+
+h1, h2 {
+    text-align: center;
 }
 
 img {
